--- a/lab_1.ipynb
+++ b/lab_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNSQbjHFmKYD5HPSn9kW0X",
+      "authorship_tag": "ABX9TyO3mAwEqrInrHdg3M46anwE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "nnGOUKSEShuX"
+        "id": "nnGOUKSEShuX",
+        "outputId": "6b2cb01f-27e2-46d9-e4c5-f416c0c0ec24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "PuAj2jeHTgaF"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
